add some more basics
+ add script to client node
+ add Clock Singleton
+ add Router Singleton

--- a/prod.cfg
+++ b/prod.cfg
@@ -1,3 +1,7 @@
 [Server]
-websocket_url = "wss://play.thomasventurini.com"
+url = "wss://play.thomasventurini.com"
 port = 1909
+
+[World]
+world = "default"
+
